# researchq

./: .gitignore  .gitmodules  Dockerfile  INTEGRATION_GUIDE.md  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  go-ingestion.yml
backend/: main.py  requirements.txt
embedding_server/: Dockerfile  README.md  main.py  requirements.txt
faiss_helper/: detect_missing_faiss_ids.py
go_ingestion/: .gitignore  DEPLOYMENT.md  Makefile  go.mod  main.go  restart.sh
go_ingestion/db/: db.go
go_ingestion/internal/pipeline/: pipeline.go
go_ingestion/internal/research_paper_apis/: arxiv.go  response_model.go  semantic_scholar.go  springer_nature.go
go_ingestion/internal/textsplitter/: recursive_character_textsplitter.go
helpers/: __init__.py  process_documents.py  resources.py  streamlit_render.py  ui.py  upload_file.py
src/: streamlithelper.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
